Fix some spacing issues
Attribution for "March of the Spoons" overflowed on mobile, so added
"overflow-wrap: break-word" CSS. Removed a space. Changed a word to
prevent weird wrapping because Chrome and Edge are not good at
properly breaking Thai words.

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
     font-size: 18px;
     font-family: courier;
     color: yellow;
+    overflow-wrap: break-word;
 }
 
 h1 {
